sync 2025-08-29 new wokr